some more merge fixes

--- a/talks/talks/2024_04-latte-the_next_paradigm_of_hw_design.jinja2
+++ b/talks/talks/2024_04-latte-the_next_paradigm_of_hw_design.jinja2
@@ -48,8 +48,14 @@
     border: 0 !important;
   }
   tbody tr:nth-child(1) td {
-      background: white !important;
-    }
+      background: #34548a !important;
+  }
+  tbody tr:nth-child(2) td {
+      background: #0f4b6e !important;
+  }
+  tbody tr:nth-child(3) td {
+      background: #5a4a78 !important;
+  }
 }
 </style>
 {% endblock %}
@@ -120,9 +126,9 @@ Reveal.on( 'fragmenthidden', event => {
       <li class="fragment">What could come next? A view of the next paradigm of hardware design</li>
       <li class="fragment">Recent efforts to build the next paradigm
         <ul>
-          <li class="fragment">New HDLs and design abstractions: <span class="small">Lava, Chisel, Amaranth, Spade, HeteroCL</span></li>
-          <li class="fragment">New SoC design frameworks: <span class="small">Chipyard, ESP, OpenPiton, PULP, BlackParrot</span></li>
-          <li class="fragment">New simulators: <span class="small">Verilator, FireSim, Manticore, Arcilator, RepCut, ESSENT</span></li>
+          <li class="fragment">New HDLs and design abstractions</li>
+          <li class="fragment">New simulators</li>
+          <li class="fragment">New SoC design frameworks</li>
         </ul>
       </li>
       <li class="fragment">What's still missing? Why are we not in the new age of hardware design?
