--- a/talks/talks/2024_04-latte-the_next_paradigm_of_hw_design.jinja2
+++ b/talks/talks/2024_04-latte-the_next_paradigm_of_hw_design.jinja2
@@ -209,14 +209,15 @@ Reveal.on( 'fragmenthidden', event => {
 
   <section>
     <h2>Specification</h2>
-    <div class="center">
-      <p><em>Insert picture of random excel spreadsheets, AXI spec documents, DDR state machines</em></p>
+    <div class="center fragment">
+      <img class="image" src="./figs/dynamic/latte24/specification.svg" />
+      <!--<p><em>Insert picture of random excel spreadsheets, AXI spec documents, DDR state machines</em></p>-->
     </div>
 
     <ul>
-      <li>English and Excel specs are the norm</li>
-      <li>Simulators, models, and verification collateral are handcrafted rather than generated</li>
-      <li>Translation errors due to undefined behaviors and misinterpretation are common</li>
+      <li class="fragment">English, Excel, and drawing specs are the norm</li>
+      <li class="fragment">Simulators, models, and verification collateral are handcrafted rather than generated</li>
+      <li class="fragment">Translation errors due to undefined behaviors and misinterpretation are common</li>
     </ul>
   </section>
 
